@@ -2,5 +2,6 @@ Version 7.4.0
 
 - Auto-Connect Added Objects
 - Fixed issue with Gibbs Reactor
+- Fixed Conversion Reactor heat balance
 - Fixed issue with temperature calculation in PH Flash
 - Other fixes and enhancements
